--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/db/schema.rb
 
 # more important files to be blind to
 public/assets/**
